Added various declarations

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 /04_exercises/02_nakedExpression/main.go~
 /printer/cmd/main.go~
 /printer/printer.go~
+/06_Variable/shortDeclaration/main.go~
+/06_Variable/redeclaration/main.go~
+/06_Variable/multipleVariables/main.go~
