Added type conversion

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /06_Variable/shortDeclaration/main.go~
 /06_Variable/redeclaration/main.go~
 /06_Variable/multipleVariables/main.go~
+*/*/main.go~
+*/*/main.go~
